Update encode jwt